--- a/Downloads/invlog_test/pubspec.yaml
+++ b/Downloads/invlog_test/pubspec.yaml
@@ -10,30 +10,35 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  
-  # Firebase dependencies
-  firebase_core: ^3.12.1  # Base version that others will align with
+
+  # ✅ Updated Firebase Dependencies
+  firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   firebase_storage: ^12.4.4
   cloud_firestore: ^5.6.5
-  
-  # State Management
+  firebase_core_web: ^2.21.1
+  firebase_auth_web: ^5.14.1
+  firebase_storage_web: ^3.10.11
+  cloud_firestore_web: ^4.4.5
+
+  # ✅ State Management
   provider: ^6.1.1
 
-  # Storage
+  # ✅ Secure Storage
   flutter_secure_storage: ^10.0.0-beta.4
 
-  # Location
+  # ✅ Location Services
   geolocator: ^13.0.3
 
-  # Utils
+  # ✅ Utilities
   intl: ^0.20.2
   uuid: ^4.2.1
   path: ^1.8.3
   logger: ^2.0.2+1
   freezed_annotation: ^3.0.0
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   google_sign_in: ^6.1.6
+  js: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -42,18 +47,10 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.3
   build_runner: ^2.4.7
   freezed: ^3.0.4
-  json_serializable: ^6.7.1
+  json_serializable: ^6.9.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
     - assets/icons/
-
-dependency_overrides:
-  async: ^2.13.0
-  fake_async: ^1.3.3
-  geolocator_android: ^5.0.0
-  leak_tracker: ^10.0.9
-  material_color_utilities: ^0.12.0
-  vm_service: ^15.0.0
